# ZanebonoRssReader

./: .env.example  .gitignore  AGENTS.md  AGENTS_UPDATED.md  CLAUDE.md  CONTRIBUTING.md  Dprojectmy-robotfrontappcomponentslayoutArticleListPanel.css  PROJECT_STRUCTURE.md  READING_PREFERENCES_GUIDE.md  README.md  check_hierarchy.py  check_hierarchy2.py  check_hierarchy3.py  check_roots.py  debug_compare.py  debug_compare.txt  debug_hierarchy.py  debug_hierarchy2.py  debug_missing.py  debug_missing.txt  debug_output.txt  debug_output2.txt  docker-compose.pgvector.yml  docker-compose.yml  hierarchy_analysis.txt  hierarchy_event.json  hierarchy_response.json  ollama_raw_response_dump.txt  pyproject.toml  response_126446.txt  tag_context_dump_74551.txt  test.opml  tmp_board_timeline.json  verify_fix.py
.claude/: settings.local.json
.planning/: 04-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  task-tag-hierarchy-fix.md
.sisyphus/: boulder.json
backend/: .env.example  README.md  app.py  auto_refresh.py  auto_summary.py  config.py  database.py  init_data.py  models.py  requirements-new.txt  requirements.txt  rss_parser.py  scheduler_base.py  (+1 more)
backend-go/: .dockerignore  AGENTS.md  ARCHITECTURE.md  DATABASE.md  DATABASE_SUMMARY.md  Dockerfile  README.md  REVIEW.md  go.mod  go.sum  start_server.bat  test_api.go
tests/workflow/: README.md  config.py  pyproject.toml  requirements.txt  test_error_handling.py  test_schedulers.py  test_workflow_integration.py
tests/workflow/utils/: __init__.py  api_client.py  database.py  mock_services.py
(+853 files in other folders)
